tests/paczka2/big_fuzzy/15257168.err
Error in line 3: XggB A885 48,6
Error in line 2: A885 S32 38,8
Error in line 1: RLseqypXM S32 88,4
Error in line 8: A885 A904 21,7
Error in line 18: A885 A885 12,3
Error in line 29: G3J4fQ A904 11,9
Error in line 45: RLseqypXM S32 153,6
Error in line 47: RLseqypXM A904 76,5
Error in line 50: G3J4fQ S32 35,4
Error in line 48: RLseqypXM S419 9,5
Error in line 64: A885 A904 163,0
Error in line 66: A885 A885 10,2
Error in line 55: G3J4fQ S419 13,0
Error in line 88: 2Hn4xIJ8R5 S32 13,2
Error in line 80: XggB A904 96,1
Error in line 60: Qpx4j A885 57,2
Error in line 93: KSeq8S8ncTy S32 28,9
Error in line 98: G3J4fQ A904 0,5
Error in line 99: KSeq8S8ncTy A904 3,6
Error in line 104: Qpx4j S419 96,7
Error in line 122: G3J4fQ A885 75,7
Error in line 123: G3J4fQ S32 98,8
Error in line 129: A885 A885 49,4
Error in line 131: A885 S32 65,8
Error in line 146: 2Hn4xIJ8R5 A904 12,3
Error in line 147: RLseqypXM A904 81,2
Error in line 168: Qpx4j S419 8,0
Error in line 167: XggB A885 15,6
Error in line 165: A885 A885 65,9
Error in line 181: KSeq8S8ncTy S32 26,0
Error in line 189: A885 S
Error in line 190: 19 165,
Error in line 184: RLseqypXM S32 243,4
Error in line 216: KSeq8S8ncTy A904 76,7
Error in line 218: KSeq8S8ncTy A885 35,6
Error in line 214: XggB S32 6,1
Error in line 226: A885 S419 30,8
Error in line 229: A885 A904 -2,5
Error in line 213: RLseqypXM A885 52,9
Error in line 236: KSeq8S8ncTy S32 8,0
Error in line 237: XggB S419 45,7
Error in line 242: RLseqypXM A904 84,1
Error in line 243: RLseqypXM A885 85,4
Error in line 234: 2Hn4xIJ8R5 A885 35,3
